manifests/production/medtracker-poller-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: medtracker
  name: poller
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/medtracker/poller:26fbc41c10807d1d0980fac8ff4b36092299723c
