manifests/production/medtracker-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: medtracker
  name: medtracker
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/medtracker:d2e1dfe3d1cfe2d4682cf24f7be6a6aa102b2831
