manifests/production/medtracker-webui-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: medtracker
  name: webui
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/medtracker/webui:46b43e2af5ce50c4c84dbef79016a63a9793e50f
