manifests/production/production-images.patch.yaml
# This file is overwritten by CI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: row-major-web-content-deployment
  namespace: row-major-web
spec:
  template:
    spec:
      containers:
        - name: row-major-web-content
          image: gcr.io/bomsync-214520/webalator:eb19d4be234010517d85f30ba98a529a3c3155e8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharded-controller
  namespace: sharded-controller
spec:
  template:
    spec:
      containers:
        - name: sharded-controller
          image: gcr.io/bomsync-214520/shardedcontroller:eb19d4be234010517d85f30ba98a529a3c3155e8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rumor-mill
  namespace: rumor-mill
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/rumor-mill:eb19d4be234010517d85f30ba98a529a3c3155e8
