manifests/production/row-major-web-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: row-major-web
  name: row-major-web-content-deployment
spec:
  template:
    spec:
      containers:
      - name: row-major-web-content
        image: gcr.io/bomsync-214520/webalator:2b1af10898d2b9ea0ee12211864b98dcd93c35f6
