manifests/production/rumor-mill-poller-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rumor-mill
  name: rumor-mill
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/rumor-mill/cmd/poller:5accac4ba4dfbba9af9d2b28d36db76c82eb3f66
