manifests/production/rumor-mill-production-images.merge.yaml
# This file is overwritten by CI.
#
# Refer to //infra-tools/bump-manifest to see how it is generated.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rumor-mill
  name: rumor-mill
spec:
  template:
    spec:
      containers:
      - name: main
        image: gcr.io/bomsync-214520/rumor-mill:869133ca8523c26d83c3e67649afa1205aa0d9e6
