manifests/production/sharded-controller-production-images.merge.yaml
# This file is overwritten by CI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharded-controller
  namespace: sharded-controller
spec:
  template:
    spec:
      containers:
        - name: sharded-controller
          image: gcr.io/bomsync-214520/shardedcontroller:e9f598ff7a13970745099d27c5d1c3641491f7ee
