manifests/production/rendered.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: row-major-web
---
apiVersion: v1
kind: Namespace
metadata:
  name: rumor-mill
---
apiVersion: v1
kind: Namespace
metadata:
  name: sharded-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: row-major-web
    component: content
  name: row-major-web-content-service
  namespace: row-major-web
spec:
  ports:
  - name: http
    port: 8001
    protocol: TCP
    targetPort: 8080
  selector:
    app: row-major-web
    component: content
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: row-major-web
    component: content
  name: row-major-web-content-deployment
  namespace: row-major-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: row-major-web
      component: content
  template:
    metadata:
      labels:
        app: row-major-web
        component: content
    spec:
      containers:
      - command:
        - /app/webalator/webalator
        - --static-content-dir=webalator/static-content
        - --template-dir=webalator/content
        - --listen=0.0.0.0:8080
        - --debug-listen=0.0.0.0:8081
        - --enable-profiling
        - --enable-tracing
        - --enable-metrics
        image: gcr.io/bomsync-214520/webalator:eb19d4be234010517d85f30ba98a529a3c3155e8
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        name: row-major-web-content
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
      serviceAccountName: webalator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rumor-mill
  name: rumor-mill
  namespace: rumor-mill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rumor-mill
  template:
    metadata:
      labels:
        app: rumor-mill
    spec:
      containers:
      - command:
        - /app/rumor-mill/rumor-mill
        - --debug-listen=0.0.0.0:8001
        - --logtostderr=true
        image: gcr.io/bomsync-214520/rumor-mill:eb19d4be234010517d85f30ba98a529a3c3155e8
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        name: main
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
      serviceAccountName: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sharded-controller
  name: sharded-controller
  namespace: sharded-controller
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sharded-controller
  template:
    metadata:
      labels:
        app: sharded-controller
    spec:
      containers:
      - args:
        - --shard_namespace=$(POD_NAMESPACE)
        - --shard_selector=app=sharded-controller
        - --self_pod_name=$(POD_NAME)
        - --config_map_namespace=$(POD_NAMESPACE)
        image: gcr.io/bomsync-214520/shardedcontroller:eb19d4be234010517d85f30ba98a529a3c3155e8
        name: sharded-controller
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: row-major-web
    networking.gke.io/managed-certificates: www-row-major-net,row-major-net
    networking.gke.io/v1beta1.FrontendConfig: row-major-web
  labels:
    app: row-major-web
    component: ingress
  name: ingress6
  namespace: row-major-web
spec:
  backend:
    serviceName: row-major-web-content-service
    servicePort: http
